# Dynamo-Engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml
demos/: CMakeLists.txt  audio.cpp  compile.sh  controls.cpp  ecs.cpp  init.cpp  initialize.cpp  jukebox.cpp  logger.cpp  random.cpp  renderer.cpp  rendering.cpp  scenes.cpp  unique_type.cpp
demos/assets/shaders/: default.frag copy.spv  default.frag.spv  default.vert copy.spv  default.vert.spv
src/: Application.cpp  Application.hpp  Clock.cpp  Clock.hpp  Display.cpp  Display.hpp  Dynamo.h  Dynamo.hpp  Input.cpp  Input.hpp  Types.hpp  aabb.cpp  aabb.h  actor.cpp  actor.h  clock.cpp  clock.h  color.cpp  color.h  display.cpp  display.h  engine.cpp  engine.h  error.cpp  error.h  fsm.cpp  fsm.h  inputs.cpp  inputs.h  jukebox.cpp  jukebox.h  scene.cpp  scene.h  sprite.cpp  sprite.h  state.cpp  state.h  textures.cpp  textures.h  vec2d.cpp  (+1 more)
src/Application/: Application.cpp  Application.hpp  ApplicationFlag.hpp
src/Asset/: Asset.hpp  AssetCache.hpp  AssetManager.hpp  Sound.cpp  Sound.hpp
src/Asset/Loader/: GeometryLoader.cpp  GeometryLoader.hpp  SoundLoader.cpp  SoundLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
src/Assets/: Sound.cpp  Sound.hpp
src/Clock/: Clock.cpp  Clock.hpp
src/Core/: Clock.cpp  Clock.hpp  Core.hpp  Display.cpp  Display.hpp  Input.cpp  Input.hpp
src/Engine/: Engine.cpp  Engine.hpp  EngineFlag.hpp
src/Graphics/: Geometry.hpp  GeometryCache.cpp  GeometryCache.hpp  GeometryInstance.hpp  Layer.hpp  LayerView.hpp  Material.hpp  MaterialSystem.hpp  Mesh.cpp  Mesh.hpp  MeshCache.cpp  MeshCache.hpp  MeshInstance.hpp  Model.hpp  Renderer.cpp  Renderer.hpp  Shader.hpp  Target.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  View.hpp
src/Graphics/Shaders/: common.glsl  default.frag.glsl  default.vert.glsl
src/Graphics/Vulkan/: Allocator.cpp  Allocator.hpp  Buffer.cpp  Buffer.hpp  Command.cpp  Command.hpp  CommandAllocator.cpp  CommandAllocator.hpp  CommandPool.cpp  CommandPool.hpp  Debugger.cpp  Debugger.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  Device.cpp  Device.hpp  DrawSet.cpp  DrawSet.hpp  Fence.cpp  Fence.hpp  FrameContext.hpp  Framebuffer.hpp  FramebufferCache.cpp  FramebufferCache.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  ImageAllocator.cpp  (+66 more)
src/Jukebox/: Chunk.hpp  DSP.cpp  DSP.hpp  Fourier.cpp  Fourier.hpp  HRTF.cpp  HRTF.hpp  Jukebox.cpp  Jukebox.hpp  Listener.hpp  Resample.cpp  Resample.hpp  Sound.cpp  Sound.hpp  SoundDevice.hpp  SoundManager.cpp  SoundManager.hpp  SoundMaterial.hpp
src/Log/: Log.cpp  Log.hpp  Message.cpp  Message.hpp
src/Math/: Box2.hpp  Circle.hpp  Color.hpp  Common.hpp  Complex.hpp  Delaunay.cpp  Delaunay.hpp  Fourier.cpp  Fourier.hpp  Mat3.hpp  Mat4.hpp  Matrix.hpp  Quaternion.hpp  SIMD.hpp  Segment2.hpp  Triangle2.hpp  Vec2.hpp  Vec3.hpp  Vectorize.hpp
src/Messenger/: Message.cpp  Message.hpp  Messenger.cpp  Messenger.hpp
src/Object/: Object.hpp  Ref.hpp
src/Resource/: Resource.hpp  ResourceManager.hpp
src/Runtime/: Runtime.cpp  Runtime.hpp  RuntimeFlag.hpp
src/Sound/: Buffer.cpp  Buffer.hpp  Chunk.hpp  Convolver.cpp  Convolver.hpp  Device.hpp  EffectNode.cpp  EffectNode.hpp  Filter.cpp  Filter.hpp  HRTF.cpp  HRTF.hpp  Jukebox.cpp  Jukebox.hpp  Listener.cpp  Listener.hpp  Material.hpp  Resample.cpp  Resample.hpp  Sound.cpp  Sound.hpp  SoundCache.cpp  SoundCache.hpp  SoundManager.cpp  SoundManager.hpp  Source.cpp  Source.hpp
src/Utils/: Allocator.cpp  Allocator.hpp  Bits.hpp  ChannelData.hpp  IdGenerator.hpp  IdTracker.hpp  Log.hpp  QuadTree.hpp  Random.hpp  RingBuffer.cpp  RingBuffer.hpp  SparseSet.hpp  ThreadPool.hpp  TypeId.hpp
src/actor/: actor.cpp  actor.h
src/ai/: fsh.cpp  fsm.h  state.cpp  state.h
src/core/: clock.cpp  clock.h  display.cpp  display.h  inputs.cpp  inputs.h  jukebox.cpp  jukebox.h  renderer.cpp  renderer.h  textures.cpp  textures.h
src/ecs/: actor.cpp  component.cpp  component.h  ecs.cpp  ecs.h  entity.cpp  entity.h  events.cpp  events.h  sparse.cpp  sparse.h  system.cpp  system.h  world.cpp  world.h
src/gui/: button.cpp  button.h  widget.cpp  widget.h
src/light/: light.cpp  light.h
src/log/: error.cpp  error.h
src/main/: engine.cpp  engine.h  scene.cpp  scene.h
src/net/: client.cpp  client.h  node.cpp  node.h  packet.cpp  packet.h  server.cpp  server.h
src/physics/: body.cpp  body.h  broad.cpp  broad.h  circle.cpp  circle.h  common.cpp  common.h  edge.cpp  edge.h  narrow.cpp  narrow.h  physics.h  polygon.cpp  polygon.h  shape.cpp  shape.h  vec2d.cpp  vec2d.h  world.cpp  world.h
src/sprite/: sprite.cpp  sprite.h
src/state/: fsm.cpp  fsm.h  state.cpp  state.h
src/util/: aabb.cpp  aabb.h  color.cpp  color.h  matrix.cpp  matrix.h  random.cpp  random.h  ringbuffer.cpp  ringbuffer.h  typeid.cpp  typeid.h  util.h  vec2d.cpp  vec2d.h  vector.cpp  vector.h
tests/: Box2-Test.cpp  CMakeLists.txt  ChannelData-Test.cpp  Circle-Test.cpp  CommonMath-Test.cpp  Complex-Test.cpp  Delaunay-Test.cpp  Fourier-Test.cpp  Quaternion-Test.cpp  RingBuffer-Test.cpp  Segment-Test.cpp  SparseSet-Test.cpp  Triangle2-Test.cpp  Vec2-Test.cpp  Vec3-Test.cpp
tests/src/: Allocator-Test.cpp  Bits-Test.cpp  Box2-Test.cpp  ChannelData-Test.cpp  Circle-Test.cpp  Color-Test.cpp  Common.hpp  CommonMath-Test.cpp  Complex-Test.cpp  Fourier-Test.cpp  IdTracker-Test.cpp  Matrix-Test.cpp  QuadTree-Test.cpp  Quaternion-Test.cpp  RingBuffer-Test.cpp  Segment-Test.cpp  SparseSet-Test.cpp  ThreadPool-Test.cpp  Triangle2-Test.cpp  Vec2-Test.cpp  Vec3-Test.cpp
tests/src/Math/: Box2.cpp  Circle.cpp  Color.cpp  Common.cpp  Complex.cpp  Delaunay.cpp  Fourier.cpp  Quaternion.cpp  Segment.cpp  Triangle2.cpp  Vec2.cpp  Vec3.cpp  Vectorize.cpp
tests/src/Math/Arch/: AVX.cpp  AVX512.cpp  Common.hpp  Neon.cpp  SSE.cpp  Scalar.cpp
tests/src/Object/: Ref.cpp
tests/src/Sound/: Buffer.cpp  Sound.cpp
tests/src/Utils/: Bits.cpp  ChannelData.cpp  IdGenerator.cpp  IdTracker.cpp  SparseSet.cpp  TypeId.cpp
(+105 files in other folders)
